feat: added the jwt middleware, fixed the unauthorizedErrorResponse, added method for getByID and getByEmail
