# auth/docs/swagger.json
@@ -131,6 +131,11 @@
         },
         "/users/activate/{token}": {
             "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Activates a user by invitation token",
                 "produces": [
                     "application/json"
