# common/errors.go
@@ -38,7 +38,6 @@ func UnauthorizedError(w http.ResponseWriter, r *http.Request, err error) {
 
 func UnauthorizedMiddlewareError(w http.ResponseWriter, r *http.Request, err error) {
 	Logger.Warnf("Unauthorized request", "method", r.Method, "path", r.URL.Path, "error", err.Error())
-	w.Header().Set("WWW-Authenticate", `Basic realm="restricted", charset="UTF-8"`)
 
 	WriteError(w, http.StatusUnauthorized, err.Error())
 }
